--- a/index.html
+++ b/index.html
@@ -39,50 +39,50 @@
                 </ul>
             </div>
     <div class="container"> <!--membuat class container-->
-        <div class="row justify-content-center"> <!--mengatur posisi "container" ke tengah-->
-            <div class="col-md-6 my-5"> <!--mengatur lebar konten-->
-                    <h3 style="margin-top:25%; color: #1101f1;">LOGIN</h3> <!--memberi tulisan "LOGIN" dan mengatur warna tulisan login-->
+        <div class="row justify-content-center"> 
+            <div class="col-md-8 my-5"> 
+                    <h3 style="margin-top:25%;margin-left: 5%; color: #1101f1;">LOGIN</h3> <!--memberi tulisan "LOGIN" dan mengatur warna tulisan login-->
                     <form style="margin-top: 5%;">
-                        <div class="mb-3"> <!--mengatur posisi kolom email-->
-                          <input type="email" style="max-width: 80%;" placeholder="Email Adress" class="form-control email" id="exampleInputEmail1" aria-describedby="emailHelp" required> <!--membuat kolom email-->
+                        <div class="mb-3" style="margin-left: 5%;"> <!--mengatur posisi kolom email-->
+                          <input type="email" style="max-width: 60%;" placeholder="Email Adress" class="form-control email" id="exampleInputEmail1" aria-describedby="emailHelp" required> <!--membuat kolom email-->
                           <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div> <!--membuat tulisan di dalam kolom email-->
                         </div>
-                        <div class="input-group mb-3"> <!--mengatur posisi kolom password-->
-                          <input type="password" style="max-width:72%;" class="form-control password" id="password" placeholder="Password" aria-label="Recipient's username" aria-describedby="basic-addon2"> <!--membuat kolom password-->
+                        <div class="input-group mb-3" style="margin-left: 5%;"> <!--mengatur posisi kolom password-->
+                          <input type="password" style="max-width:60%;" class="form-control password" id="password" placeholder="Password" aria-label="Recipient's username" aria-describedby="basic-addon2"> <!--membuat kolom password-->
                           <span style="max-width: 20%;" class="input-group-text" id="basic-addon2" onclick="password_show_hide()"> <!--membuat fitur show ato hide password-->
                               <i class="fas fa-eye" id="show_eye"></i>
                               <i class="fas fa-eye-slash d-none" id="hide_eye"></i>
                           </span>
                         </div>
-                        <div class="mb-3 form-check"> <!--membuat fitur "ingat saya"-->
+                        <div class="mb-3 form-check" style="margin-left: 5%;"> <!--membuat fitur "ingat saya"-->
                           <input type="checkbox" class="form-check-input" id="exampleCheck1">
                           <label class="form-check-label" for="exampleCheck1">Remember Me</label>
                         </div>
-                        <a href="#" type="submit" class="btn btn-primary login">Submit</a> <!--membuat tombol "submit" untuk login-->
+                        <a href="#" style="margin-left: 5%;" type="submit" class="btn btn-primary login">Submit</a> <!--membuat tombol "submit" untuk login-->
                     </form>
             </div>
-            <div class="col-md-6 my-5"> <!--mengatur posisi navigation system-->
+            <!-- <div class="col-md-6 my-5">
                 <ul class="nav justify-content-end">
-                    <li class="nav-item"><!--membuat navigation item baru-->
-                      <a class="nav-link active" aria-current="page" href="#">Home</a> <!--membuat tombol home-->
+                    <li class="nav-item">
+                      <a class="nav-link active" aria-current="page" href="#">Home</a>
                     </li>
-                    <li class="nav-item"><!--membuat navigation item baru-->
-                      <a class="nav-link" href="#">About</a> <!--membuat tombol about-->
+                    <li class="nav-item">
+                      <a class="nav-link" href="#">About</a>
                     </li>
-                    <li class="nav-item"><!--membuat navigation item baru-->
-                      <a class="nav-link" href="#">Company</a><!--membuat tombol company-->
+                    <li class="nav-item">
+                      <a class="nav-link" href="#">Company</a>
                     </li>
-                    <li class="nav-item"><!--membuat navigation item baru-->
-                      <a class="nav-link" href="#">Contact Us</a><!--membuat tombol contact us-->
+                    <li class="nav-item">
+                      <a class="nav-link" href="#">Contact Us</a>
                     </li>
-                    <li class="nav-item"><!--membuat navigation item baru-->
-                      <a class="nav-link" href="#">Login</a><!--membuat tombol login-->
+                    <li class="nav-item">
+                      <a class="nav-link" href="#">Login</a>
                     </li>
                   </ul>
                 <center>
-                    <img src="assets/4.png" alt="" style="max-width: 90%; margin-left: 10%; margin-top: 10%;"> <!--memberi gambar dan mengatur psosis di sebelah kanan tempat login-->
+                    <img src="assets/4.png" alt="" style="max-width: 90%; margin-left: 10%; margin-top: 10%;"> 
                 </center>
-            </div>
+            </div> -->
         </div>
     </div>
 
