--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         }
 
         body {
-            background: url('assets/1.jpg') no-repeat center center fixed; 
+            background: url('assets/Frame 2.png') no-repeat center center fixed; 
             -webkit-background-size: cover;
             -moz-background-size: cover;
             -o-background-size: cover;
