--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <div class="container"> <!--membuat class container-->
         <div class="row justify-content-center"> 
             <div class="col-md-8 my-5"> 
-                    <h3 style="margin-top:25%;margin-left: 5%; color: #9D9191;">LOGIN</h3> <!--memberi tulisan "LOGIN" dan mengatur warna tulisan login-->
+                    <h3 style="margin-top:25%;margin-left: 5%; color: #1101f1;">LOGIN</h3> <!--memberi tulisan "LOGIN" dan mengatur warna tulisan login-->
                     <form style="margin-top: 5%;">
                         <div class="mb-3" style="margin-left: 5%;"> <!--mengatur posisi kolom email-->
                           <input type="email" style="max-width: 60%;" placeholder="Email Adress" class="form-control email" id="exampleInputEmail1" aria-describedby="emailHelp" required> <!--membuat kolom email-->
