--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
                   <label class="form-check-label" for="exampleCheck1">Check me out</label>
                 </div>
                 <button type="submit" class="btn btn-primary">Submit</button>
+                <a href="register.html">belum punya akun?</a>
             </form>
         </div>
     </div>
