--- a/register.html
+++ b/register.html
@@ -33,7 +33,7 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-xs-1" align="center" style="margin-top: 5%;">
-                <img src="assets/User.png" style="max-width: 100%;"></img>
+                <img src="assets/key.png" style="width: 10%;"></img>
             </div>
         </div>
         <div class="row justify-content-center">
@@ -76,6 +76,7 @@
                   <label class="form-check-label" for="exampleCheck1">Mengikuti Syarat dan Ketentuan</label>
                 </div>
                 <button type="submit" class="btn btn-primary">Daftar</button>
+                <a href="index.html">sudah punya akun?</a>
             </form>
         </div>
     </div>
